# radicalp

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt  test.cpp  test1.cpp
include/: Fraction.hpp
src/: Fraction.cpp
